<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="B_1_1_PRG_Master_Leak_Test" Id="{74fda7da-e1c3-493f-8c86-5902a8ab2668}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM B_1_1_PRG_Master_Leak_Test

VAR

	tonStationStopped					: TON;
	tonExecute							: TON;
	rGoodStatistics						: ARRAY [0..1] OF R_TRIG;
	rBadStatistics						: ARRAY [0..1] OF R_TRIG;
	rEfficency							: ARRAY [0..1] OF STRING(510);
	
	bEventsFlag							: ARRAY [0..100] OF BOOL;
/////////////////////////////////////////////////////////////////////////////////////I O/////////////////////////////////////////////////////////////////////////////////////	

	bStopped							: ARRAY [0..1] OF BOOL;
	bError								: ARRAY [0..1] OF BOOL;
	bReady								: ARRAY [0..1] OF BOOL;
	bDone								: ARRAY [0..1] OF BOOL;
	bReset								: ARRAY [0..1] OF BOOL;
	bStart								: ARRAY [0..1] OF BOOL;
	bStop								: ARRAY [0..1] OF BOOL;	
	bBusy								: ARRAY [0..1] OF BOOL;	
	fLeakTestDone						: ARRAY [0..1] OF F_TRIG;	
	bLeakTestDone						: ARRAY [0..1] OF BOOL;	
	rPass								: ARRAY [0..1] OF R_TRIG;	
	bPass								: ARRAY [0..1] OF BOOL;	
	rFail								: ARRAY [0..1] OF R_TRIG;	
	bFail								: ARRAY [0..1] OF BOOL;
	rReset								: ARRAY [0..1] OF R_TRIG;

	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[a_ACT_Ctrl_Station_1();
b_ACT_IO();
c_ACT_Statistics_Station_1();
d_ACT_Set_Events_Station_1();]]></ST>
    </Implementation>
    <Action Name="a_ACT_Ctrl_Station_1" Id="{ce5dd8ea-9899-4a9f-bde8-defccc1c38a2}">
      <Implementation>
        <ST><![CDATA[/////////////////////////////////////////////////////////////////////////////////////UTILITIES/////////////////////////////////////////////////////////////////////////////////////
tonStationStopped( IN := bStopped[0] AND bStopped[1], PT := T#1S);
tonExecute(IN := stLeakTesters.State = E_LeakTester_State.RUN_LEAK_TESTERS, PT := T#500MS);


/////////////////////////////////////////////////////////////////////////////////////CONDITIONS/////////////////////////////////////////////////////////////////////////////////////

IF stLeakTesters.CMD.bAbort OR bError[0] OR bError[1] THEN
								
	stLeakTesters.State											:= E_LeakTester_State.RESET;
	
ELSIF stLeakTesters.CMD.bEndCycle AND NOT ( bError[0] OR bError[1]) THEN
	
	stLeakTesters.State											:= E_LeakTester_State.RUN_LEAK_TESTERS;

END_IF



CASE stLeakTesters.State OF
	
	E_LeakTester_State.ABORTED:
	
								IF stLeakTesters.CMD.bEnable AND NOT bError[0] THEN
									stLeakTesters.State			:= E_LeakTester_State.HOMING;
								ELSIF bError[0] OR bError[1] THEN
									stLeakTesters.State			:= E_LeakTester_State.ERROR;
								END_IF
	
	E_LeakTester_State.HOMING:
	
								IF bReady[0] AND bReady[1] AND bStopped[0] AND bStopped[1] THEN
									stLeakTesters.State			:= E_LeakTester_State.READY;
								END_IF
								
	E_LeakTester_State.READY:
	
								IF stLeakTesters.CMD.bExecute THEN
									
									stLeakTesters.State			:= E_LeakTester_State.RUN_LEAK_TESTERS;
								
								END_IF
		
								
	E_LeakTester_State.RUN_LEAK_TESTERS:	
								
								IF stLeakTesters.CMD.LeakTestersCMD.RunLeakTester1 AND stLeakTesters.CMD.LeakTestersCMD.RunLeakTester2 THEN
										
										bStart[0]				:= TRUE;
										bStart[1]				:= TRUE;
									
								ELSIF stLeakTesters.CMD.LeakTestersCMD.RunLeakTester1 AND NOT stLeakTesters.CMD.LeakTestersCMD.RunLeakTester2 THEN
										
										bStart[0]				:= TRUE;
									
								ELSIF NOT stLeakTesters.CMD.LeakTestersCMD.RunLeakTester1 AND stLeakTesters.CMD.LeakTestersCMD.RunLeakTester2 THEN
										
										bStart[1]				:= TRUE;
									
								END_IF
								
								IF tonExecute.Q THEN
									
									stLeakTesters.State			:= E_LeakTester_State.WAIT_LEAK_TESTERS;
								
								END_IF
	
	E_LeakTester_State.WAIT_LEAK_TESTERS:
	
								IF stLeakTesters.CMD.LeakTestersCMD.RunLeakTester1 AND stLeakTesters.CMD.LeakTestersCMD.RunLeakTester2 THEN
										
										IF bLeakTestDone[0] AND bLeakTestDone[1] THEN
											
											stLeakTesters.State	:= E_LeakTester_State.DONE;
											
										END_IF
									
								ELSIF stLeakTesters.CMD.LeakTestersCMD.RunLeakTester1 AND NOT stLeakTesters.CMD.LeakTestersCMD.RunLeakTester2 THEN
										
										IF bLeakTestDone[0]  THEN
											
											stLeakTesters.State	:= E_LeakTester_State.DONE;
											
										END_IF
									
								ELSIF NOT stLeakTesters.CMD.LeakTestersCMD.RunLeakTester1 AND stLeakTesters.CMD.LeakTestersCMD.RunLeakTester2 THEN
										
										IF bLeakTestDone[1]  THEN
											
											stLeakTesters.State	:= E_LeakTester_State.DONE;
											
										END_IF
									
								END_IF
	
	E_LeakTester_State.DONE:
								IF  stLeakTesters.CMD.bAcknowledge THEN
									
									stLeakTesters.CMD.bAcknowledge := FALSE;
									stLeakTesters.State	:= E_LeakTester_State.RESULTS;
									
								END_IF	
								
	E_LeakTester_State.RESULTS:
								
								IF bPass[0] THEN
									
									stCycleData.stLeakTester_CycleData[0].bPass := TRUE;
								
								ELSIF bFail[0] THEN
									
									stCycleData.stLeakTester_CycleData[0].bFail := TRUE;
								
								END_IF
								
								IF bPass[1] THEN
									
									stCycleData.stLeakTester_CycleData[1].bPass := TRUE;
								
								ELSIF bFail[1] THEN
									
									stCycleData.stLeakTester_CycleData[1].bFail	:= TRUE;
								
								END_IF
								
	E_LeakTester_State.RESET:
	
								stCycleData.stLeakTester_CycleData[0].bPass	:= FALSE;
								stCycleData.stLeakTester_CycleData[0].bFail	:= FALSE;
								stCycleData.stLeakTester_CycleData[1].bPass	:= FALSE;
								stCycleData.stLeakTester_CycleData[1].bFail	:= FALSE;
								bStart[0]						:= FALSE;
								bStart[1]						:= FALSE;
								bReset[0]						:= FALSE;
								bReset[1]						:= FALSE;
								bStop[0]						:= FALSE;
								bStop[1]						:= FALSE;
								
								IF bError[0] OR bError[1] THEN

									stLeakTesters.State		:= E_LeakTester_State.ERROR;

								ELSIF stLeakTesters.CMD.bAbort OR stLeakTesters.CMD.bEndCycle THEN
									
									stLeakTesters.State			:= E_LeakTester_State.ABORTED;
									
								ELSE stLeakTesters.State			:= E_LeakTester_State.READY;
								
								END_IF
								
								
								
	E_LeakTester_State.STOPPING: 
	
								bStop[0]						:= TRUE;
								bStop[1]						:= TRUE;
								
								IF tonStationStopped.Q THEN
									
									stLeakTesters.State			:= E_LeakTester_State.RESET;
									
								END_IF
	
	E_LeakTester_State.ERROR:
	
								IF NOT bError[0] AND bError[1] THEN
									
									stLeakTesters.State						:= E_LeakTester_State.ABORTED;
									
								END_IF

ELSE stLeakTesters.State := E_LeakTester_State.ABORTED;
	
END_CASE
/////////////////////////////////////////////////////////////////////////////////////STATUS/////////////////////////////////////////////////////////////////////////////////////

stLeakTesters.Status.bBusy	:= 	stLeakTesters.State = E_LeakTester_State.STOPPING OR
								stLeakTesters.State = E_LeakTester_State.HOMING OR
								stLeakTesters.State = E_LeakTester_State.RUN_LEAK_TESTERS OR
								stLeakTesters.State = E_LeakTester_State.WAIT_LEAK_TESTERS;

stLeakTesters.Status.bDone	:= 	stLeakTesters.State = E_LeakTester_State.DONE;

stLeakTesters.Status.bError	:= 	stLeakTesters.State = E_LeakTester_State.ERROR;	

stLeakTesters.Status.bReady	:=	stLeakTesters.State = E_LeakTester_State.READY;

stLeakTesters.Status.bStopped := NOT stLeakTesters.Status.bBusy;
]]></ST>
      </Implementation>
    </Action>
    <Action Name="b_ACT_IO" Id="{0f51cbd8-7d44-46ba-8ff2-5b85b0a3ce4b}">
      <Implementation>
        <ST><![CDATA[

bStopped[0]								:= NOT LeakTester1_IO.sti28General_I_O.bTestActiveLiveData;
bStopped[1]								:= NOT LeakTester2_IO.sti28General_I_O.bTestActiveLiveData;
bError[0]								:= LeakTester1_IO.sti28General_I_O.bMalfunction;
bError[1]								:= LeakTester2_IO.sti28General_I_O.bMalfunction;
bReady[0]								:= LeakTester1_IO.sti28General_I_O.bInstrumentReady;
bReady[1]								:= LeakTester2_IO.sti28General_I_O.bInstrumentReady;
bPass[0]								:= LeakTester1_IO.sti28General_I_O.bProgramAccept;
bPass[1]								:= LeakTester2_IO.sti28General_I_O.bProgramAccept;
bFail[0]								:= LeakTester1_IO.sti28General_I_O.bProgramReject;
bFail[1]								:= LeakTester2_IO.sti28General_I_O.bProgramReject;
LeakTester1_IO.sti28General_I_O.bReset	:= bReset[0];	
LeakTester2_IO.sti28General_I_O.bReset	:= bReset[1];	
LeakTester1_IO.sti28General_I_O.bStart	:= bStart[0];
LeakTester2_IO.sti28General_I_O.bStart	:= bStart[1];
LeakTester1_IO.sti28General_I_O.bStop	:= bStop[0];
LeakTester2_IO.sti28General_I_O.bStop	:= bStop[1];

rReset[0](CLK := stLeakTesters.CMD.bReset, Q => bReset[0]);
rReset[1](CLK := stLeakTesters.CMD.bReset, Q => bReset[1]);

fLeakTestDone[0](CLK := LeakTester1_IO.sti28General_I_O.bTestActiveLiveData);
fLeakTestDone[1](CLK := LeakTester2_IO.sti28General_I_O.bTestActiveLiveData);
rPass[0](CLK := LeakTester1_IO.sti28General_I_O.bProgramAccept);
rPass[1](CLK := LeakTester2_IO.sti28General_I_O.bProgramAccept);
rFail[0](CLK := LeakTester1_IO.sti28General_I_O.bProgramReject);
rFail[1](CLK := LeakTester2_IO.sti28General_I_O.bProgramReject);



IF fLeakTestDone[0].Q THEN
	
	bLeakTestDone[0]					:= TRUE;
	
END_IF

IF fLeakTestDone[1].Q THEN
	
	bLeakTestDone[1]					:= TRUE;
	
END_IF

IF rPass[0].Q THEN
	
	bPass[0]							:= TRUE;

END_IF

IF rPass[1].Q THEN
	
	bPass[1]							:= TRUE;

END_IF

IF rFail[0].Q THEN
	
	bFail[0]							:= TRUE;

END_IF

IF rFail[1].Q THEN
	
	bFail[1]							:= TRUE;

END_IF]]></ST>
      </Implementation>
    </Action>
    <Action Name="c_ACT_Statistics_Station_1" Id="{33f3666a-9a01-47bc-b17c-8cc705cb878c}">
      <Implementation>
        <ST><![CDATA[stStatisticsHMI[1].sName			:= 'LEAK TESTER';


rGoodStatistics[0]( CLK := stCycleData.stLeakTester_CycleData[0].bPass AND (stLeakTesters.State = E_LeakTester_State.RESULTS));
rGoodStatistics[1]( CLK := stCycleData.stLeakTester_CycleData[1].bPass AND (stLeakTesters.State = E_LeakTester_State.RESULTS));
rBadStatistics[0] ( CLK := stCycleData.stLeakTester_CycleData[0].bFail AND (stLeakTesters.State = E_LeakTester_State.RESULTS));
rBadStatistics[1] ( CLK := stCycleData.stLeakTester_CycleData[1].bFail AND (stLeakTesters.State = E_LeakTester_State.RESULTS));

IF 	rGoodStatistics[0].Q THEN
	
	stStatisticsHMI[1].nGood		:= stStatisticsHMI[1].nGood + 1;
	stStatisticsHMI[1].nTotalGood	:= stStatisticsHMI[1].nTotalGood + 1;
	
END_IF
								
IF 	rBadStatistics[0].Q THEN
	
	stStatisticsHMI[1].nBad			:= stStatisticsHMI[1].nBad + 1;
	stStatisticsHMI[1].nTotalBad	:= stStatisticsHMI[1].nTotalBad + 1;
	
END_IF

IF stStatisticsHMI[1].bResetGood THEN
	stStatisticsHMI[1].nGood		:= 0;
END_IF

IF stStatisticsHMI[1].bResetBad THEN
	stStatisticsHMI[1].nBad			:= 0;
END_IF


IF 	rGoodStatistics[1].Q THEN
	
	stStatisticsHMI[2].nGood		:= stStatisticsHMI[2].nGood + 1;
	stStatisticsHMI[2].nTotalGood	:= stStatisticsHMI[2].nTotalGood + 1;
	
END_IF
								
IF 	rBadStatistics[1].Q THEN
	
	stStatisticsHMI[2].nBad			:= stStatisticsHMI[2].nBad + 1;
	stStatisticsHMI[2].nTotalBad	:= stStatisticsHMI[2].nTotalBad + 1;
	
END_IF

IF stStatisticsHMI[2].bResetGood THEN
	stStatisticsHMI[2].nGood		:= 0;
END_IF

IF stStatisticsHMI[2].bResetBad THEN
	stStatisticsHMI[2].nBad			:= 0;
END_IF



IF (( stStatisticsHMI[1].nGood + stStatisticsHMI[1].nBad) <> 0) THEN
	
	rEfficency[0]							:= LREAL_TO_FMTSTR(in := (DINT_TO_REAL(stStatisticsHMI[1].nGood) /( DINT_TO_REAL(stStatisticsHMI[1].nGood) + DINT_TO_REAL(stStatisticsHMI[1].nBad))) * 100.0,iPrecision := 2, bRound := TRUE);
	stStatisticsHMI[1].nEfficency		:= CONCAT(STR1 := '%', STR2 := (rEfficency[0]));

ELSE stStatisticsHMI[1].nEfficency		:= CONCAT(STR1 := '%', STR2 := (DINT_TO_STRING(0)));
	
END_IF

IF (( stStatisticsHMI[2].nGood + stStatisticsHMI[2].nBad) <> 0) THEN
	
	rEfficency[1]							:= LREAL_TO_FMTSTR(in := (DINT_TO_REAL(stStatisticsHMI[2].nGood) /( DINT_TO_REAL(stStatisticsHMI[2].nGood) + DINT_TO_REAL(stStatisticsHMI[2].nBad))) * 100.0,iPrecision := 2, bRound := TRUE);
	stStatisticsHMI[2].nEfficency		:= CONCAT(STR1 := '%', STR2 := (rEfficency[1]));

ELSE stStatisticsHMI[2].nEfficency		:= CONCAT(STR1 := '%', STR2 := (DINT_TO_STRING(0)));
	
END_IF
]]></ST>
      </Implementation>
    </Action>
    <Action Name="d_ACT_Set_Events_Station_1" Id="{e78af74f-1632-4c5a-a6d8-e4aea7d2a011}">
      <Implementation>
        <ST><![CDATA[//IMMEDIATE FAULTS

stStationEvents[1].aEvents[0].bFault						:= TRUE;
stStationEvents[1].aEvents[0].bEventFlag					:= bEventsFlag[0];
stStationEvents[1].aEvents[0].bEventText					:= 'ST1 EVENT 0';
stStationEvents[1].aEvents[0].sSolution						:= 'Solution 1';

//CYCLE STOP REQUEST

stStationEvents[1].aEvents[2].bCycleStopRequest				:= TRUE;
stStationEvents[1].aEvents[2].bEventFlag					:= bEventsFlag[2];
stStationEvents[1].aEvents[2].bEventText					:= 'ST1 EVENT 2';
stStationEvents[1].aEvents[2].sSolution						:= '';

//Message

stStationEvents[1].aEvents[3].bMessage						:= TRUE;
stStationEvents[1].aEvents[3].bEventFlag					:= bEventsFlag[3];
stStationEvents[1].aEvents[3].bEventText					:= 'Message 3';
stStationEvents[1].aEvents[3].sSolution						:= '';]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="B_1_1_PRG_Master_Leak_Test">
      <LineId Id="157" Count="2" />
      <LineId Id="154" Count="0" />
    </LineIds>
    <LineIds Name="B_1_1_PRG_Master_Leak_Test.a_ACT_Ctrl_Station_1">
      <LineId Id="121" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="193" Count="0" />
      <LineId Id="195" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="161" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="146" Count="0" />
      <LineId Id="432" Count="1" />
      <LineId Id="435" Count="0" />
      <LineId Id="434" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="133" Count="0" />
      <LineId Id="128" Count="0" />
      <LineId Id="3" Count="3" />
      <LineId Id="247" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="134" Count="1" />
      <LineId Id="8" Count="0" />
      <LineId Id="11" Count="2" />
      <LineId Id="248" Count="0" />
      <LineId Id="14" Count="1" />
      <LineId Id="19" Count="0" />
      <LineId Id="250" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="251" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="232" Count="0" />
      <LineId Id="216" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="363" Count="0" />
      <LineId Id="252" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="231" Count="0" />
      <LineId Id="234" Count="2" />
      <LineId Id="246" Count="0" />
      <LineId Id="237" Count="8" />
      <LineId Id="230" Count="0" />
      <LineId Id="254" Count="2" />
      <LineId Id="258" Count="1" />
      <LineId Id="257" Count="0" />
      <LineId Id="229" Count="0" />
      <LineId Id="260" Count="1" />
      <LineId Id="266" Count="2" />
      <LineId Id="293" Count="0" />
      <LineId Id="295" Count="1" />
      <LineId Id="294" Count="0" />
      <LineId Id="270" Count="2" />
      <LineId Id="297" Count="3" />
      <LineId Id="273" Count="3" />
      <LineId Id="301" Count="3" />
      <LineId Id="277" Count="1" />
      <LineId Id="265" Count="0" />
      <LineId Id="263" Count="0" />
      <LineId Id="152" Count="1" />
      <LineId Id="156" Count="0" />
      <LineId Id="306" Count="0" />
      <LineId Id="308" Count="0" />
      <LineId Id="307" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="179" Count="2" />
      <LineId Id="203" Count="0" />
      <LineId Id="333" Count="0" />
      <LineId Id="335" Count="0" />
      <LineId Id="349" Count="3" />
      <LineId Id="336" Count="0" />
      <LineId Id="334" Count="0" />
      <LineId Id="353" Count="0" />
      <LineId Id="355" Count="7" />
      <LineId Id="354" Count="0" />
      <LineId Id="198" Count="0" />
      <LineId Id="370" Count="3" />
      <LineId Id="437" Count="1" />
      <LineId Id="376" Count="5" />
      <LineId Id="420" Count="1" />
      <LineId Id="431" Count="0" />
      <LineId Id="429" Count="1" />
      <LineId Id="428" Count="0" />
      <LineId Id="422" Count="0" />
      <LineId Id="424" Count="0" />
      <LineId Id="426" Count="1" />
      <LineId Id="425" Count="0" />
      <LineId Id="423" Count="0" />
      <LineId Id="374" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="375" Count="0" />
      <LineId Id="164" Count="0" />
      <LineId Id="419" Count="0" />
      <LineId Id="383" Count="1" />
      <LineId Id="389" Count="0" />
      <LineId Id="162" Count="0" />
      <LineId Id="386" Count="0" />
      <LineId Id="102" Count="0" />
      <LineId Id="436" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="50" Count="1" />
      <LineId Id="393" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="394" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="395" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="61" Count="2" />
      <LineId Id="1" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="399" Count="2" />
      <LineId Id="403" Count="0" />
      <LineId Id="397" Count="0" />
      <LineId Id="405" Count="0" />
      <LineId Id="404" Count="0" />
      <LineId Id="407" Count="0" />
      <LineId Id="406" Count="0" />
      <LineId Id="409" Count="0" />
      <LineId Id="408" Count="0" />
      <LineId Id="95" Count="0" />
    </LineIds>
    <LineIds Name="B_1_1_PRG_Master_Leak_Test.b_ACT_IO">
      <LineId Id="9" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="1" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="3" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="69" Count="1" />
      <LineId Id="20" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="72" Count="1" />
      <LineId Id="24" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="4" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="41" Count="3" />
      <LineId Id="67" Count="1" />
      <LineId Id="28" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="34" Count="4" />
      <LineId Id="33" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="50" Count="4" />
      <LineId Id="49" Count="0" />
      <LineId Id="61" Count="4" />
      <LineId Id="56" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="57" Count="3" />
      <LineId Id="55" Count="0" />
    </LineIds>
    <LineIds Name="B_1_1_PRG_Master_Leak_Test.c_ACT_Statistics_Station_1">
      <LineId Id="2" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="3" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="4" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="8" Count="2" />
      <LineId Id="19" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="20" Count="1" />
      <LineId Id="1" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="24" Count="1" />
      <LineId Id="27" Count="2" />
      <LineId Id="26" Count="0" />
      <LineId Id="67" Count="21" />
      <LineId Id="66" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="49" Count="7" />
      <LineId Id="90" Count="7" />
      <LineId Id="89" Count="0" />
      <LineId Id="38" Count="0" />
    </LineIds>
    <LineIds Name="B_1_1_PRG_Master_Leak_Test.d_ACT_Set_Events_Station_1">
      <LineId Id="2" Count="5" />
      <LineId Id="17" Count="12" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>